--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.commonsware.cwac:camera:0.7.0'
-    compile "com.google.firebase:firebase-auth:9.0.2"
+    compile "com.google.firebase:firebase-auth:9.4.0"
+    compile 'com.google.firebase:firebase-database:9.4.0'
 
 }
