--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,10 @@
             android:name=".ui.activity.PublishActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="stateHidden"></activity>
-        <activity android:name=".ui.activity.SignUpActivity"></activity>
+            android:windowSoftInputMode="stateHidden"/>
+
+        <activity android:name=".ui.activity.SignUpActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
